# rust-webapp

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  start_all.sh
migrations/2024-11-02-215726_blogpost/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
static/: home.html  load_posts.js
