[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1" }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
diesel = { version = "~2.1.1", features = [
    "postgres",
    "uuid",
    "r2d2",
    "chrono",
] }
dotenv = "0.15.0"
chrono = "*"
