[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_contrib = { version = "*", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
rocket-multipart-form-data = "0.10.7"
diesel = { version = "~2.1.1", features = [
    "postgres",
    "uuid",
    "r2d2",
    "chrono",
] }
dotenv = "0.15.0"
chrono = { version = "*", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] } # Required for async runtime
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "*"
